re-enabling call to getAuthorizationDetails disabled at r72048 for GRBK-754   -- Dev modes that need gradebooks reqiure its side effects